--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,13 +2,12 @@ spring:
   application:
     name: demo
   datasource:
-    url: jdbc:mysql://localhost:3306/spring
+    url: jdbc:mysql://localhost:3306/student_management
     username: root
     password: rtsd0220
     driver-class-name: com.mysql.cj.jdbc.Driver
-server:
-  servlet:
-    context-path: /api
+
+
 logging:
   level:
     org:
